// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

// `[T]enant[Ident]` is a common meta-service key structure in form of `<PREFIX>/<TENANT>/<NAME>`.
message TIdent {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The user this record belongs to.
  // It must not be empty.
  string tenant = 1;

  // Resource name
  string name = 2;
}

message TQuota {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The max databases can be created in the tenant.
  uint32 max_databases = 1;

  // The max tables per database can be created in the tenant.
  uint32 max_tables_per_database = 2;

  // The max stages can be created in the tenant.
  uint32 max_stages = 3;

  // The max files per stage can be created in the tenant.
  uint32 max_files_per_stage = 4;

  // The max number of users can be created in the tenant.
  uint32 max_users = 5;
}